# elegant_chart

./: .gitignore  CLAUDE.md  README.md  USAGE.md  __init__.py  axis_mixin.py  bar_mixin.py  data_mixin.py  elegant_chart.py  figure_mixin.py  get_api_data.py  gradient_mixin.py  line_mixin.py  occupancy_rates.py  pyproject.toml  style_mixin.py  tmp_diag.py  types.py
.claude/: settings.json
.github/workflows/: ci.yml
examples/: aircraft_movement_domestic.py  bar_comprehensive.py  bar_minimal.py  line_comprehensive.py  line_maldives_fx_reserves.py  line_maldives_reserves_history.py  line_minimal.py  occupancy_rates.py  series_101_domestic_airlines_2023.py  series_101_domestic_vs_international.py  series_101_top10_airlines.py  series_101_top10_airlines_flight_movements.py  series_101_top10_airlines_yearly.py
src/elegant_chart/: __init__.py  _logging.py  _paths.py  axis_mixin.py  axis_utils.py  bar_mixin.py  base.py  bump_mixin.py  data_mixin.py  elegant_chart.py  figure_mixin.py  get_api_data.py  line_mixin.py  style_mixin.py  types.py
tests/: test_axis_utils.py  test_charts.py  test_compact_formatter.py
