[project]
name = "elegant_chart"
version = "0.1.0"
description = "Elegant chart utilities for Python"
authors = [{name = "Shammu"}]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
