[project]
name = "elegant_chart"
version = "0.1.0"
description = "Elegant chart utilities for Python"
authors = [{name = "Shammu"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.urls]
Repository = "https://github.com/shammu119/elegant_chart"

[project.optional-dependencies]
data = ["requests>=2.25", "openpyxl>=3.0"]
dev  = ["pytest>=7", "ruff>=0.4", "openpyxl>=3.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
